[package]
name = "gossip"
version = "0.1.0"
authors = ["i1i1"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"

expiring_map = "0.1"

# tracing
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"

# cli
structopt = "0.3"

# Nice macroses
thiserror = "1"
displaydoc = "0.1"
